removal: replace Long constructor in raid boss state